--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,14 @@ azure-core==1.24.2
 azure-identity==1.10.0
 azure-keyvault-secrets==4.4.0
 azure-storage-blob==12.13.0
+certifi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_884c889c-96af-444f-bd6d-daddb5e9a462ykj3l5n_/croots/recipe/certifi_1655968814730/work/certifi
 cffi==1.15.1
 charset-normalizer==2.1.0
 configparser==5.2.0
 cryptography==37.0.4
 idna==3.3
 isodate==0.6.1
-mariadb==1.0.11
+mariadb==1.1.3
 msal==1.18.0
 msal-extensions==1.0.0
 msrest==0.7.1
